// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardInvoiceService should get the expected revenue of a month 1`] = `
[
  {
    "amount": 150,
    "dueAt": "2023-01-19T12:27:23.265Z",
    "memberPlan": "Foo Subscription",
    "paidAt": undefined,
  },
  {
    "amount": 200,
    "dueAt": "2023-01-19T12:33:55.859Z",
    "memberPlan": "Foo Subscription",
    "paidAt": "2023-01-19T12:34:01.944Z",
  },
  {
    "amount": 1000,
    "dueAt": "2023-01-19T12:41:05.640Z",
    "memberPlan": "Foo Subscription",
    "paidAt": "2023-01-19T12:48:13.188Z",
  },
]
`;

exports[`DashboardInvoiceService should get the expected revenue of a month 2`] = `
{
  "include": {
    "items": true,
    "subscription": {
      "select": {
        "memberPlan": {
          "select": {
            "name": true,
          },
        },
      },
    },
  },
  "orderBy": {
    "dueAt": "desc",
  },
  "where": {
    "OR": [
      {
        "dueAt": {
          "gte": 2023-01-01T00:00:00.000Z,
          "lt": 2023-02-01T00:00:00.000Z,
        },
      },
      {
        "paidAt": {
          "gte": 2023-01-01T00:00:00.000Z,
          "lt": 2023-02-01T00:00:00.000Z,
        },
      },
    ],
    "canceledAt": null,
    "manuallySetAsPaidByUserId": null,
  },
}
`;

exports[`DashboardInvoiceService should get the revenue of a month 1`] = `
[
  {
    "amount": 150,
    "dueAt": "2023-01-19T12:41:05.640Z",
    "memberPlan": "Foo Subscription",
    "paidAt": "2023-01-19T12:48:13.188Z",
  },
  {
    "amount": 200,
    "dueAt": "2023-01-19T12:33:55.859Z",
    "memberPlan": "Foo Subscription",
    "paidAt": "2023-01-19T12:34:01.944Z",
  },
]
`;

exports[`DashboardInvoiceService should get the revenue of a month 2`] = `
{
  "include": {
    "items": {
      "select": {
        "amount": true,
        "quantity": true,
      },
    },
    "subscription": {
      "select": {
        "memberPlan": {
          "select": {
            "name": true,
          },
        },
      },
    },
  },
  "orderBy": {
    "paidAt": "desc",
  },
  "where": {
    "manuallySetAsPaidByUserId": null,
    "paidAt": {
      "gte": 2023-01-01T00:00:00.000Z,
      "lt": 2023-02-01T00:00:00.000Z,
    },
  },
}
`;
